[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bhoga"
version = "0.1.0"
description = "Zero-server Python library that routes AI harnesses to the best available provider for a model, based on live subscription quota."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastcore>=1.7",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools.packages.find]
include = ["bhoga*"]
